compiler/src/test/resources/amyc/nameAnalyzer/failing/UndefinedFunction.amy
object UndefinedFunction
  fn foo(): Int = { bar() }
end UndefinedFunction
